test/tests/nek_errors/invalid_settings/brick.udf
#ifdef __okl__

#include "brick.oudf"

#endif

void UDF_LoadKernels(deviceKernelProperties & kernelInfo)
{
}

void UDF_Setup()
{
}

void UDF_ExecuteStep(double time, int tstep)
{
}
